--- a/provisioning/portal/ansible/05_import.yml
+++ b/provisioning/portal/ansible/05_import.yml
@@ -4,9 +4,9 @@
   gather_facts: no
   tasks:
     - name: mkdir isu6qportal
-      file: path=/home/isucon/isu6qportal/data owner=isucon group=isucon mode=755 state=directory
+      file: path="/home/isucon/isu6qportal/data" owner=isucon group=isucon mode=755 state=directory
     - name: upload importteams
-      copy: src=../../../portal/importteams_linux_amd64 dest=/home/isucon/isu6qportal/importteams mode=755
+      copy: src="../../../portal/importteams_linux_amd64" dest=/home/isucon/isu6qportal/importteams mode=755 force=yes
     - name: upload temas.tsv
-      copy: src=../../../portal/data/teams.tsv dest=/home/isucon/isu6qportal/data/teams.tsv mode=755
+      copy: src="../../../portal/data/teams.tsv" dest="/home/isucon/isu6qportal/data/teams.tsv" mode=755 force=yes
     - shell: cat /home/isucon/isu6qportal/data/teams.tsv | /home/isucon/isu6qportal/importteams -dsn-base 'root:root@'
