--- a/provisioning/image/ansible/01_base.yml
+++ b/provisioning/image/ansible/01_base.yml
@@ -7,10 +7,10 @@
   tasks:
     - group: name=isucon
     - user: name=isucon groups=isucon
-    - file: path=/home/isucon owner=isucon group=isucon mode=755 state=directory
-    - copy: src=/usr/share/zoneinfo/Asia/Tokyo dest=/etc/localtime follow=yes remote_src=True
+    - file: path="/home/isucon" owner=isucon group=isucon mode=755 state=directory
+    - copy: src="/usr/share/zoneinfo/Asia/Tokyo" dest="/etc/localtime" follow=yes remote_src=True force=yes
     - name: set timezone
-      copy: dest=/etc/timezone owner=root group=root mode=0644 content="Asia/Tokyo\n"
+      copy: dest="/etc/timezone" owner=root group=root mode=0644 content="Asia/Tokyo\n" force=yes
       notify: update timezone
   handlers:
     - name: update timezone
