--- a/provisioning/image/ansible/03_nginx.yml
+++ b/provisioning/image/ansible/03_nginx.yml
@@ -6,9 +6,9 @@
     - always
   tasks:
     - apt: name=nginx state=present
-    - copy: src=../files/nginx.php.conf dest=/etc/nginx/nginx.php.conf owner=root mode=644
-    - copy: src=../files/fastcgi_params dest=/etc/nginx/fastcgi_params owner=root mode=644
-    - copy: src=../files/nginx.conf dest=/etc/nginx/nginx.conf owner=root mode=644
+    - copy: src="../files/nginx.php.conf" dest="/etc/nginx/nginx.php.conf" owner=root mode=644
+    - copy: src="../files/fastcgi_params" dest="/etc/nginx/fastcgi_params" owner=root mode=644
+    - copy: src="../files/nginx.conf" dest="/etc/nginx/nginx.conf" owner=root mode=644
       notify:
         - restart nginx
     - service: name=nginx state=running enabled=true
