--- a/provisioning/image/ansible/04_deploy.yml
+++ b/provisioning/image/ansible/04_deploy.yml
@@ -6,10 +6,10 @@
   tags:
     - dev
   tasks:
-    - synchronize: src=../../../webapp/ dest=/home/isucon/webapp owner=no group=no links=yes
-    - synchronize: src=../../../bin/ dest=/home/isucon/bin owner=no group=no
-    - synchronize: src=../files/env.sh dest=/home/isucon/env.sh owner=no group=no
-    - file: path=/home/isucon owner=isucon group=isucon state=directory recurse=yes
+    - synchronize: src="../../../webapp/" dest="/home/isucon/webapp" owner=no group=no links=yes
+    - synchronize: src="../../../bin/" dest="/home/isucon/bin" owner=no group=no
+    - synchronize: src="../files/env.sh" dest="/home/isucon/env.sh" owner=no group=no
+    - file: path="/home/isucon" owner=isucon group=isucon state=directory recurse=yes
       become_user: root
     # - name: perl
     # - shell: PATH=/home/isucon/.local/perl/bin:$PATH carton install --deployment
@@ -32,7 +32,7 @@
     #   args:
     #     chdir: /home/isucon/webapp/python
     - name: go
-      shell: PATH=/home/isucon/.local/go/bin:$PATH GOROOT=/home/isucon/.local/go GOPATH=/home/isucon/webapp/go make all
+      shell: PATH="/home/isucon/.local/go/bin:$PATH" GOROOT="/home/isucon/.local/go" GOPATH="/home/isucon/webapp/go" make all
       args:
         chdir: /home/isucon/webapp/go
     # - name: composer
@@ -55,13 +55,13 @@
   tags:
     - prod
   tasks:
-    - copy: src=../../../bin/ dest=/home/isucon/bin owner=isucon group=isucon mode=755
-    - copy: src=../files/env.sh dest=/home/isucon/env.sh owner=isucon group=isucon mode=755
+    - copy: src="../../../bin/" dest="/home/isucon/bin" owner=isucon group=isucon mode=755
+    - copy: src="../files/env.sh" dest="/home/isucon/env.sh" owner=isucon group=isucon mode=755
     - unarchive:
         copy=no
-        src=https://isucon6qimage.example.com/isucon6q/webapp.tar.gz
-        dest=/home/isucon/
-        creates=/home/isucon/webapp
+        src="https://isucon6qimage.example.com/isucon6q/webapp.tar.gz"
+        dest="/home/isucon/"
+        creates="/home/isucon/webapp"
         owner=isucon
         group=isucon
 
@@ -72,7 +72,7 @@
     - always
   tasks:
     - name: isupam (systemd)
-      copy: src=../files/isupam.service dest=/etc/systemd/system/isupam.service owner=root mode=644
+      copy: src="../files/isupam.service dest=/etc/systemd/system/isupam.service owner=root mode=644"
     # - name: perl isuda (systemd)
     #   copy: src=../files/isuda.perl.service dest=/etc/systemd/system/isuda.perl.service owner=root mode=644
     # - name: perl isutar (systemd)
@@ -90,9 +90,9 @@
     # - name: python isutar (systemd)
     #   copy: src=../files/isutar.python.service dest=/etc/systemd/system/isutar.python.service owner=root mode=644
     - name: go isuda (systemd)
-      copy: src=../files/isuda.go.service dest=/etc/systemd/system/isuda.go.service owner=root mode=644
+      copy: src="../files/isuda.go.service" dest="/etc/systemd/system/isuda.go.service" owner=root mode=644
     - name: go isutar (systemd)
-      copy: src=../files/isutar.go.service dest=/etc/systemd/system/isutar.go.service owner=root mode=644
+      copy: src="../files/isutar.go.service" dest="/etc/systemd/system/isutar.go.service" owner=root mode=644
     # - name: scala isuda (systemd)
     #   copy: src=../files/isuda.scala.service dest=/etc/systemd/system/isuda.scala.service owner=root mode=644
     # - name: scala isutar (systemd)
