--- a/provisioning/portal/ansible/02_xbuild.yml
+++ b/provisioning/portal/ansible/02_xbuild.yml
@@ -5,8 +5,8 @@
   gather_facts: no
   tasks:
     - git:
-        repo=https://github.com/tagomoris/xbuild.git
-        dest=/home/isucon/.xbuild
+        repo="https://github.com/tagomoris/xbuild.git"
+        dest="/home/isucon/.xbuild"
         update=yes
     # perl
     - command: /home/isucon/.xbuild/perl-install 5.24.0 /home/isucon/.local/perl
