--- a/provisioning/portal/ansible/03_mysql.yml
+++ b/provisioning/portal/ansible/03_mysql.yml
@@ -8,13 +8,13 @@
     - apt: name=mysql-server-5.7 state=present
     - apt: name=mysql-client-5.7 state=present
     - name: copy my.cnf
-      copy: src=../files/my.cnf dest=/etc/mysql/my.cnf owner=root group=root mode=644
+      copy: src="../files/my.cnf" dest="/etc/mysql/my.cnf" owner=root group=root mode=644
       notify:
         - restart mysql
     - service: name=mysql state=running enabled=true
-    - file: path=/home/isucon/isu6qportal/db owner=isucon group=isucon mode=755 state=directory recurse=yes
-    - copy: src=../../../portal/db/schema.sql dest=/home/isucon/isu6qportal/db/schema.sql
-    - shell: mysql_tzinfo_to_sql /usr/share/zoneinfo | mysql -uroot -proot mysql
+    - file: path="/home/isucon/isu6qportal/db" owner=isucon group=isucon mode=755 state=directory recurse=yes
+    - copy: src="../../../portal/db/schema.sql" dest="/home/isucon/isu6qportal/db/schema.sql"
+    - shell: mysql_tzinfo_to_sql "/usr/share/zoneinfo" | mysql -uroot -proot mysql
     - shell: |
         for d in $(seq 0 2); do
           mysql -uroot -proot -e "CREATE DATABASE isu6qportal_day$d"
