Improved some syntax

--- a/provisioning/bench/ansible/04_deploy.yml
+++ b/provisioning/bench/ansible/04_deploy.yml
@@ -4,7 +4,7 @@
   become: yes
   become_user: isucon
   tasks:
-    - copy: src="../../../bench/isucon6q/" dest="/home/isucon/isucon6q/"
+    - copy: src="../../../bench/isucon6q/" dest="/home/isucon/isucon6q/" force=yes
     - file: path="/home/isucon/isucon6q/isucon6q-bench-worker" mode=0755
     - file: path="/home/isucon/isucon6q/isucon6q-bench" mode=0755
 
@@ -13,6 +13,6 @@
   become: yes
   tasks:
     - name: bench (systemd)
-      copy: src="../files/isucon6-bench-worker.service"  dest="/etc/systemd/system/isucon6-bench-worker.service" owner=root mode=644
+      copy: src="../files/isucon6-bench-worker.service"  dest="/etc/systemd/system/isucon6-bench-worker.service" owner=root mode=644 force=yes
     - name: enable bench worker
       service: name=isucon6-bench-worker state=running enabled=true
