--- a/provisioning/image/ansible/02_xbuild.yml
+++ b/provisioning/image/ansible/02_xbuild.yml
@@ -10,6 +10,7 @@
         repo="https://github.com/tagomoris/xbuild.git"
         dest="/home/isucon/.xbuild"
         update=yes
+        depth=1
     # perl
     # - command: /home/isucon/.xbuild/perl-install 5.24.0 /home/isucon/.local/perl
     #   args:
