--- a/provisioning/bench/ansible/00_devel.yml
+++ b/provisioning/bench/ansible/00_devel.yml
@@ -4,7 +4,7 @@
   gather_facts: no
   tasks:
     - apt: upgrade=safe update_cache=true
-    - apt: name={{item}} state=present install_recommends=no
+    - apt: name="{{item}}" state=present install_recommends=no
       with_items:
         - git
         - curl
