--- a/provisioning/image/ansible/03_mysql.yml
+++ b/provisioning/image/ansible/03_mysql.yml
@@ -10,7 +10,7 @@
     - apt: name=mysql-server-5.7 state=present
     - apt: name=mysql-client-5.7 state=present
     - name: copy my.cnf
-      copy: src="../files/my.cnf" dest="/etc/mysql/my.cnf" owner=root group=root mode=644
+      copy: src="../files/my.cnf" dest="/etc/mysql/my.cnf" owner=root group=root mode=644 force=yes
       notify:
         - restart mysql
     - service: name=mysql state=running enabled=true
